# sparksql-scope-lineage

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  RELEASE.md  SECURITY.md  pyproject.toml
docs/: audit-methodology.md  how-it-works.md  how-it-works.zh-CN.md  limitations.md  llm-profile-guide.zh-CN.md  llm-profile-prompt.zh-CN.md  profile-json-business-semantics-design.zh-CN.md  profile-json-generation-and-usage.zh-CN.md  schema-metadata.md  scope-model.md  task-insight-validation-plan.zh-CN.md  task-insight-workbench-design.zh-CN.md
examples/: select_star_with_schema.sql  simple_insert.sql  table_cols.csv  table_info.csv  union_merge.sql
lineage_parser/: __init__.py  cli.py  end_to_end.py  html_report.py  insight_builder.py  insight_report.py  parser.py  related_metadata.py  schema_metadata.py  scope_builder.py  scope_profile.py  scope_resolver.py  scope_role_inferrer.py  scope_serializer.py  scope_types.py  scope_views.py  scope_warnings.py  skill_entry.py  sqlglot_config.py  types.py
tests/: test_audit_scope_output.py  test_cli.py  test_compare_scope_outputs.py  test_html_report.py  test_parser_robustness.py  test_schema_metadata.py  test_schema_validation.py  test_scope_builder.py  test_scope_json.py  test_scope_profile.py  test_scope_resolver.py  test_scope_views.py  test_scope_warnings.py  test_semantic_profile.py  test_skill_entry.py  test_summarize_audit_reports.py  test_task_insight.py  test_validate_llm_profile_doc.py  test_validate_task_insight.py  test_yellow_actions.py
tools/: audit_scope_output.py  (+7 more)
(+5 files in other folders)
