[project]
name = "scope-lineage"
version = "0.0.1"
description = "Scope-aware column-level lineage parser for Spark/Hive SQL"
readme = "../README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
keywords = ["sql", "lineage", "spark", "hive", "metadata", "data-engineering"]
dependencies = ["sqlglot>=30"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
scope-lineage = "lineage_parser.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "build>=1"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lineage_parser*"]

[tool.setuptools.package-data]
lineage_parser = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
